// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`key > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_size_medium__1g4bp0q7 styles_sentiment_neutral__1g4bp0q5"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_disabled_true__1g4bp0q3 styles_size_medium__1g4bp0q7 styles_sentiment_neutral__1g4bp0q5 styles_undefined_compound_2__1g4bp0qa"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_60__m4c9ow30"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_disabled_true__1g4bp0q3 styles_size_medium__1g4bp0q7 styles_sentiment_primary__1g4bp0q4 styles_undefined_compound_5__1g4bp0qd"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_36__m4c9ow2c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q1 styles_disabled_true__1g4bp0q3 styles_size_medium__1g4bp0q7 styles_sentiment_neutral__1g4bp0q5 styles_undefined_compound_0__1g4bp0q8 styles_undefined_compound_1__1g4bp0q9 styles_undefined_compound_2__1g4bp0qa"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_stronger__m4c9owk style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_62__m4c9ow32"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q1 styles_disabled_true__1g4bp0q3 styles_size_medium__1g4bp0q7 styles_sentiment_primary__1g4bp0q4 styles_undefined_compound_3__1g4bp0qb styles_undefined_compound_4__1g4bp0qc styles_undefined_compound_5__1g4bp0qd"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_strong__m4c9owj style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_37__m4c9ow2d"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_size_medium__1g4bp0q7 styles_sentiment_primary__1g4bp0q4"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_0__m4c9ow1c style_undefined_compound_72__m4c9ow3c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_size_small__1g4bp0q6 styles_sentiment_neutral__1g4bp0q5"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="small"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_captionSmall__m4c9owt style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q1 styles_size_medium__1g4bp0q7 styles_sentiment_neutral__1g4bp0q5 styles_undefined_compound_0__1g4bp0q8"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_stronger__m4c9owk style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_26__m4c9ow22 style_undefined_compound_74__m4c9ow3e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q1 styles_size_medium__1g4bp0q7 styles_sentiment_primary__1g4bp0q4 styles_undefined_compound_3__1g4bp0qb"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_strong__m4c9owj style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_1__m4c9ow1d style_undefined_compound_73__m4c9ow3d"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;
